fix z-index of modal

--- a/src/stylesheets/components/modal/_modal.scss
+++ b/src/stylesheets/components/modal/_modal.scss
@@ -9,6 +9,7 @@
   visibility: hidden;
   opacity: 0;
   margin-top: 0rem;
+  z-index: 10000;
 
   &.show {
     visibility: visible;
